// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessagesDisplay /> messages from 'info' render correctly 1`] = `
<div
  className="MessageBubble-bubbleWrapper-7"
>
  <div
    className="MessageBubble-infoMessage-10"
    id="displayMessage"
  >
    someone has left
  </div>
</div>
`;

exports[`<MessagesDisplay /> messages from 'sender: You' render correctly 1`] = `
<div
  className="MessageBubble-bubbleWrapper-7"
>
  <div
    className="MessageBubble-bubbleYou-8"
    id="displayMessage"
  >
    You: test-you
  </div>
</div>
`;

exports[`<MessagesDisplay /> messages from 'sender: someoneElse' render correctly 1`] = `
<div
  className="MessageBubble-bubbleWrapper-7"
>
  <div
    className="MessageBubble-bubbleOther-9"
    id="displayMessage"
  >
    someoneElse: other-test
  </div>
</div>
`;
